@@ -1,15 +1,17 @@
 
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.nio.file.Path;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+
 
 public class Main {
     public static void main(String[] args) throws IOException {
         BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));
         String dirName = reader.readLine();// считываем путь к папке с консоли
-        Path dirPath = Path.of(dirName);
-        JokeCreator.getFiles(dirPath);
+        Files.walkFileTree(Paths.get(dirName), new JokeFileVisitor());
     }
 }
 /*
